# cc-switch-tui

src-tauri/: Cargo.toml
src-tauri/src/: claude_mcp.rs  claude_plugin.rs  config.rs  lib.rs  main.rs
src-tauri/src/database/: mod.rs  schema.rs
src-tauri/src/database/dao/: providers.rs  proxy.rs
src-tauri/src/proxy/: failover_switch.rs  forwarder.rs  handler_context.rs  mod.rs  server.rs  types.rs  url_router.rs
src-tauri/src/services/: mod.rs  proxy.rs  speedtest.rs  url_latency.rs
src-tauri/src/services/provider/: live.rs  mod.rs
src-tauri/src/tui/: app.rs  mod.rs  terminal.rs  theme.rs
src-tauri/src/tui/views/: mcp.rs  mod.rs  provider_form.rs  providers.rs  proxy.rs  settings.rs
src-tauri/src/tui/widgets/: input.rs  mod.rs
