[package]
name = "cc-switch-tui"
version = "4.0.0"
description = "TUI for Claude Code, Codex & Gemini CLI"
authors = ["Jason Young"]
license = "MIT"
repository = "https://github.com/farion1231/cc-switch"
edition = "2021"
rust-version = "1.85.0"

[lib]
name = "cc_switch_lib"
crate-type = ["rlib"]

[features]
default = []
test-hooks = []
tauri = []

[[bin]]
name = "cc-switch-tui"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.28"
crossterm = "0.28"

# Serialization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
dirs = "5.0"
toml = "0.8"
toml_edit = "0.22"

# HTTP & Async
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
futures = "0.3"
async-stream = "0.3"
bytes = "1.5"

# Proxy server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = { version = "1.0", features = ["full"] }

# Utilities
regex = "1.10"
rquickjs = { version = "0.8", features = ["array-buffer", "classes"] }
thiserror = "2.0"
anyhow = "1.0"
zip = "2.2"
serde_yaml = "0.9"
tempfile = "3"
url = "2.5"
once_cell = "1.21.3"
base64 = "0.22"

# Database
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
indexmap = { version = "2", features = ["serde"] }
rust_decimal = "1.33"
uuid = { version = "1.11", features = ["v4"] }

# Optimize release binary size to help reduce AppImage footprint
[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "abort"
strip = "symbols"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
